[gd_scene load_steps=4 format=3 uid="uid://g7yg1bvbr6yt"]

[ext_resource type="Texture2D" uid="uid://b1hl4gg3qcc2l" path="res://ImportantObjects/Traps/Button/Sprites/btn.png" id="1_4pq2o"]
[ext_resource type="Script" path="res://ImportantObjects/Traps/Button/Scripts/DeactivationButton.gd" id="1_kqjbl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gre5q"]
size = Vector2(32, 32)

[node name="DeactivationButton" type="Area2D"]
script = ExtResource("1_kqjbl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(7.15256e-07, 7.15256e-07)
scale = Vector2(1.6, 1.6)
texture = ExtResource("1_4pq2o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gre5q")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
